# Monte-Carlo-Stock-Price-Simulator

week_2/: Cargo.toml  data.csv
week_2/app_gui/: Cargo.toml
week_2/app_gui/src/: main.rs
week_2/app_gui/ui/: ui.slint
week_2/core_sim/: Cargo.toml
week_2/core_sim/src/: charts.rs  gbm.rs  lib.rs  plot.rs
week_2/data_io/: Cargo.toml
week_2/data_io/src/: lib.rs  loader.rs  summary.rs
week_2/stats/: Cargo.toml
week_2/stats/src/: lib.rs  summary.rs
